--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "ae.ac.adec.coursefollowup"
-        minSdkVersion 10
+        minSdkVersion 11
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -21,5 +21,30 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile 'com.koushikdutta.ion:ion:2.0.5'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:palette-v7:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
+    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'io.reactivex:rxandroid:0.24.0'
+
+    compile 'com.github.lzyzsd:circleprogress:1.0.1@aar'
+    compile 'com.github.xiprox.errorview:library:1.0.0'
+
+    compile 'com.google.android.apps.muzei:muzei-api:+'
+
+    compile 'com.mikepenz.iconics:library:0.7.1@aar'
+    compile('com.mikepenz.aboutlibraries:library:4.5.2@aar') {
+        transitive = true
+    }
+    compile('com.mikepenz.materialdrawer:library:1.0.0@aar') {
+        transitive = true
+    }
 }
