--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,10 @@ android {
         }
     }
 }
-
+repositories {
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -47,4 +50,5 @@ dependencies {
     compile('com.mikepenz.materialdrawer:library:1.0.0@aar') {
         transitive = true
     }
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
