--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     }
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.melnykov:floatingactionbutton:1.2.0'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
