--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.wrapp.floatlabelededittext:library:0.0.6'
     compile 'com.rengwuxian.materialedittext:library:1.8.3'
+    compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
+    compile 'com.facebook.android:facebook-android-sdk:3.23.0'
 }
