--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     compile 'com.afollestad:material-dialogs:0.6.3.5'
     compile 'com.facebook.android:facebook-android-sdk:3.23.0'
     compile 'com.google.android.gms:play-services:6.5.87'
-
+    compile 'de.keyboardsurfer.android.widget:crouton:1.8.5@aar'
 
 
 }
