--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,18 +20,20 @@ android {
 }
 repositories {
     mavenCentral()
+
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    //compile project(':Library:RobotoCalendarLibrary')
+    compile 'com.prolificinteractive:material-calendarview:0.2.5'
+    compile 'com.github.flavienlaurent.datetimepicker:library:0.0.2'
     compile 'com.koushikdutta.ion:ion:2.0.5'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:palette-v7:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.android.support:recyclerview-v7:21.0.3'
-
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
@@ -56,5 +58,5 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:3.23.0'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'de.keyboardsurfer.android.widget:crouton:1.8.5@aar'
-
+    compile project(':robotoCalendarLibrary')
 }
