--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,12 @@
             android:name=".activities.OneFragmentActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activities.FullScreenVideoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.FullScreenImageActivity"
+            android:screenOrientation="landscape" />
+        <activity
             android:name="com.facebook.LoginActivity"
             android:screenOrientation="portrait" />
 
