--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     //compile project(':Library:RobotoCalendarLibrary')
+    compile 'com.getbase:floatingactionbutton:1.9.0'
     compile 'com.prolificinteractive:material-calendarview:0.2.5'
     compile 'com.github.flavienlaurent.datetimepicker:library:0.0.2'
     compile 'com.koushikdutta.ion:ion:2.0.5'
