--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile('com.mikepenz.materialdrawer:library:2.0.3@aar') {
         transitive = true
     }
+    compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.melnykov:floatingactionbutton:1.2.0'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
