--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,14 @@
         android:name=".Application.myApplication"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
-        android:label="@string/app_name"
+        android:label="Course Followup"
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.MainActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name"></activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activities.Login_Activity"
-            android:label="@string/app_name"
+            android:label="@string/app_name_cfu"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
